Revert "Conversion to Glyphs source, complete with group kerning"
This reverts commit 8975c8980b197d4ad272b01e9912273261a4d3f1.

--- a/source/config.yaml
+++ b/source/config.yaml
@@ -6,8 +6,7 @@ axisOrder:
 buildVariable: true
 buildStatic: true
 buildWebfont: false
-ttDir: "../fonts/ttf"
-ttDir: "../fonts/otf"
+ttDir: "../fonts/static"
 vfDir: "../fonts/variable"
 familyName: Russolo
 stat:
